# Anura

./: .gitignore  Cargo.toml  README.md  build.rs  makefile  net.txt  policy.txt  value.txt
src/: board.rs  datagen.rs  hash.rs  main.rs  perft.rs  prng.rs  rays.rs  search.rs  time.rs  tunable.rs  uci.rs
src/eval/: mod.rs
src/mcts/: mod.rs  node.rs  search.rs  time.rs  tree.rs  tree_half.rs
src/movegen/: lookups.rs  mod.rs  movegen_lookups.rs  others.rs  pawns.rs  slideys.rs
src/nets/: mod.rs  policy.rs  policy_outs.rs  value.rs
src/nets/policy/: apn_003.pn  apn_004.pn  apn_005.pn  apn_006.pn  apn_007.pn  apn_007q.pn  apn_008.pn  loader.rs  mod.rs  outs.rs
src/nets/value/: avn_003.vn  avn_004.vn  avn_005.vn  avn_006.vn  avn_007-prev.vn  avn_007.vn  avn_008.vn  loader.rs  mod.rs
src/policy/: apn_001.pn  apn_002.pn  mod.rs
src/search/: mod.rs
src/types/: bitboard.rs  mod.rs  move_list.rs  moves.rs  piece.rs  square.rs
src/uci/: mod.rs
src/value/: avn_002.vn  mod.rs
