[package]
name = "anura"
version = "0.2.0"
edition = "2021"
description = "Soon to be a UCI Chess Engine"
repository = "https://github.com/Vast342/Anura"
readme = "README.md"
license = "GPL v3"
keywords = ["rust", "chess-engine", "chess", "uci", "uci-chess-engine", "engine-development"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
arrayvec = "0.7.6"
rand = { version = "0.8.5", optional = true }
montyformat = { git = 'https://github.com/official-monty/montyformat.git', tag = "v0.5.0", optional = true }

[features]
datagen = ["rand"]
policy = ["montyformat"]
value = []
perftsuite = []